@@ -10,7 +10,6 @@ import ru.shop.repository.CommonRepository;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class CustomerService implements CommonService{
@@ -28,7 +27,7 @@ public class CustomerService implements CommonService{
         return customerRepository.findAll();
     }
     public Optional<Customer> findById(UUID id) throws EntityNotFoundException {
-        List<Customer> customers = customerRepository.findAll().stream().map(d -> (Customer)d).collect(Collectors.toList());
+        List<Customer> customers = customerRepository.findAll().stream().map(d -> (Customer) d).toList();
 
         return Optional.of(customers.stream().filter(c -> c.getId().equals(id)).findFirst().orElseThrow(()-> new EntityNotFoundException("customer not found")));
     }
